// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<View
  onClose={[MockFunction]}
>
  <div
    className="document-panel"
  >
    <section
      className="main-content"
    >
      <div
        className="title"
      >
        Document Settings
      </div>
      <EngraveDpiSlider
        onChange={[Function]}
        value="medium"
      />
      <DropDownControl
        id="workarea_dropdown"
        label="Working Area"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "beamo",
              "value": "fbm1",
            },
            Object {
              "label": "Beambox",
              "value": "fbb1b",
            },
            Object {
              "label": "Beambox Pro",
              "value": "fbb1p",
            },
            Object {
              "label": "HEXA",
              "value": "fhexa1",
            },
          ]
        }
        value="fbb1b"
      />
      <div
        className="sub-title"
      >
        Add-ons
      </div>
      <SwitchControl
        default={false}
        id="rotary_mode"
        label="Rotary"
        name="rotary_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="borderless_mode"
        isDisabled={true}
        label="Open Bottom"
        name="borderless_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="autofocus-module"
        isDisabled={true}
        label="Autofocus"
        name="autofocus-module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="diode_module"
        isDisabled={true}
        label="Diode Laser"
        name="diode_module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
    </section>
    <section
      className="footer"
    >
      <button
        className="btn btn-default pull-right"
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="btn btn-default primary pull-right"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </section>
  </div>
</View>
`;

exports[`should render correctly 2`] = `
<View
  onClose={[MockFunction]}
>
  <div
    className="document-panel"
  >
    <section
      className="main-content"
    >
      <div
        className="title"
      >
        Document Settings
      </div>
      <EngraveDpiSlider
        onChange={[Function]}
        value="high"
      />
      <DropDownControl
        id="workarea_dropdown"
        label="Working Area"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "beamo",
              "value": "fbm1",
            },
            Object {
              "label": "Beambox",
              "value": "fbb1b",
            },
            Object {
              "label": "Beambox Pro",
              "value": "fbb1p",
            },
            Object {
              "label": "HEXA",
              "value": "fhexa1",
            },
          ]
        }
        value="fbb1b"
      />
      <div
        className="sub-title"
      >
        Add-ons
      </div>
      <SwitchControl
        default={false}
        id="rotary_mode"
        label="Rotary"
        name="rotary_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="borderless_mode"
        isDisabled={true}
        label="Open Bottom"
        name="borderless_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="autofocus-module"
        isDisabled={true}
        label="Autofocus"
        name="autofocus-module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="diode_module"
        isDisabled={true}
        label="Diode Laser"
        name="diode_module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
    </section>
    <section
      className="footer"
    >
      <button
        className="btn btn-default pull-right"
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="btn btn-default primary pull-right"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </section>
  </div>
</View>
`;

exports[`should render correctly 3`] = `
<View
  onClose={[MockFunction]}
>
  <div
    className="document-panel"
  >
    <section
      className="main-content"
    >
      <div
        className="title"
      >
        Document Settings
      </div>
      <EngraveDpiSlider
        onChange={[Function]}
        value="high"
      />
      <DropDownControl
        id="workarea_dropdown"
        label="Working Area"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "beamo",
              "value": "fbm1",
            },
            Object {
              "label": "Beambox",
              "value": "fbb1b",
            },
            Object {
              "label": "Beambox Pro",
              "value": "fbb1p",
            },
            Object {
              "label": "HEXA",
              "value": "fhexa1",
            },
          ]
        }
        value="fbb1p"
      />
      <div
        className="sub-title"
      >
        Add-ons
      </div>
      <SwitchControl
        default={false}
        id="rotary_mode"
        label="Rotary"
        name="rotary_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="borderless_mode"
        isDisabled={true}
        label="Open Bottom"
        name="borderless_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="autofocus-module"
        isDisabled={true}
        label="Autofocus"
        name="autofocus-module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="diode_module"
        isDisabled={true}
        label="Diode Laser"
        name="diode_module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
    </section>
    <section
      className="footer"
    >
      <button
        className="btn btn-default pull-right"
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="btn btn-default primary pull-right"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </section>
  </div>
</View>
`;

exports[`should render correctly 4`] = `
<View
  onClose={[MockFunction]}
>
  <div
    className="document-panel"
  >
    <section
      className="main-content"
    >
      <div
        className="title"
      >
        Document Settings
      </div>
      <EngraveDpiSlider
        onChange={[Function]}
        value="high"
      />
      <DropDownControl
        id="workarea_dropdown"
        label="Working Area"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "beamo",
              "value": "fbm1",
            },
            Object {
              "label": "Beambox",
              "value": "fbb1b",
            },
            Object {
              "label": "Beambox Pro",
              "value": "fbb1p",
            },
            Object {
              "label": "HEXA",
              "value": "fhexa1",
            },
          ]
        }
        value="fbb1p"
      />
      <div
        className="sub-title"
      >
        Add-ons
      </div>
      <SwitchControl
        default={true}
        id="rotary_mode"
        label="Rotary"
        name="rotary_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="borderless_mode"
        isDisabled={true}
        label="Open Bottom"
        name="borderless_mode"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="autofocus-module"
        isDisabled={true}
        label="Autofocus"
        name="autofocus-module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
      <SwitchControl
        default={false}
        id="diode_module"
        isDisabled={true}
        label="Diode Laser"
        name="diode_module"
        offText="Disable"
        onChange={[Function]}
        onText="Enable"
      />
    </section>
    <section
      className="footer"
    >
      <button
        className="btn btn-default pull-right"
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="btn btn-default primary pull-right"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </section>
  </div>
</View>
`;
